ahora si lo de la IP

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -115,4 +115,8 @@
     <string name="producto">Modified product</string>
     <string name="registrar">You have successfully registered</string>
     <string name="no_has_iniciado">You have not logged in</string>
+    <string name="obtener">Obtain</string>
+    <string name="cambiar">Change</string>
+    <string name="cambio_de_ip">IP Change</string>
+    <string name="ip">IP</string>
 </resources>
